--- a/src/layout/Main.module.css
+++ b/src/layout/Main.module.css
@@ -1,3 +1,7 @@
 .Main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
